@@ -5,3 +5,15 @@ A Centralized Program developed for the convenience of accessing the project fil
 ![image](https://user-images.githubusercontent.com/61798731/160700056-2d3895c2-6ba9-4d56-8ba5-86c966841552.png)
 
 This program will be updated every week.
+
+
+VM Options:
+```--module-path "G:\Java\javafx-sdk-17.0.2\lib" --add-modules javafx.controls,javafx.fxml```
+
+## Java Libraries
+
+This program GUI was built using [JavaFX](https://gluonhq.com/products/javafx/).
+
+For the Animation Effects, [AnimateFX by Typhon0](https://github.com/Typhon0/AnimateFX/).
+
+
